# historycasts

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DATASETS.md  Makefile  README.md  d3patch.org  podcast-atlas.tangle.org  pyproject.toml  wbg.rss
data/: gazetteer.csv  manual_overrides.yml  manual_review.md
dbs/: podcast_fuzzy_refined.db  podcast_semantic_latest.db
docs/: REPO_INVENTORY.md  overlap-matrix.md
frontend/: README.md  biome.json  index.html  o.org  package.json  pnpm-lock.yaml  src.md  vite.config.ts
legacy/: ARCHIVE_AUDIT.md  README.org.legacy  podcast_explorer_static_README.md  podcast_explorer_static_pyproject.toml
podcast_feeds/: Eine_Stunde_History_feed.xml  Geschichte_feed.xml  eine-std-history-rss.xml  geschichte_des_nationalsozialismus.podigeeiofeed.xml  geschichtsunterricht.podigeeiofeed.xml  haustuer.xml  history.simplecastcom.xml  rest-gesch-rss.xml  rosalux_history.podigeeiofeed.xml
schemas/: api_episodes.schema.json  api_facets.schema.json
scripts/: build_demo_db.py  build_pages_bundle.py  delete_episode_spans.py  export_review.py  merge_feeds_into_db.py  queue_to_sql.py  unified_export.py  watch_static.sh
src/: App.tsx
static_site/: docs.html  index.html
tests/: conftest.py  test_api_facets.py  test_api_filters.py  test_api_schema.py  test_cluster_metrics_export.py  test_delete_spans_cli.py  test_enrich_wiki_cli.py  test_export_site_docs.py  test_extract.py  test_extract_more.py  test_ingest_db.py  test_ingest_podcastde.py  test_models.py  test_podcastde_parse.py  test_queue_to_sql.py  test_span_curation.py  (+3 more)
(+143 files in other folders)
