[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-atlas"
version = "0.3.0"
description = "Podcast RSS ingestion + context extraction + map/timeline exploration UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "pydantic>=2",
  "python-dateutil>=2.8",
  "httpx>=0.24",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=7",
  "pytest-cov>=5",
  "jsonschema>=4",
  "ruff>=0.7",
  "mypy>=1.11",
  "types-PyYAML>=6.0",
]

[project.scripts]
podcast-atlas = "podcast_atlas.cli:main"
podcast-db = "podcast_atlas.aggregate.cli:main"
podcast-export = "podcast_atlas.export.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
